--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
 </header>
 <div id="content">
 <div class="container" role="main">
-  <center><span style="display:block; margin-top:-20px;"> <a href="https://www.linkedin.com/in/tszdudek/">LinkedIn</a> &nbsp; | &nbsp; <a href="https://www.facebook.com/tomekdudeq"> Facebook </a>  &nbsp; | &nbsp; <a href="mailto:tomdudek99@gmail.com"> Wyślij mi maila! </a> </span> </center>
+  <center><span style="display:block; margin-top:-20px;"> <a href="https://www.linkedin.com/in/tszdudek/">LinkedIn</a> &nbsp; | &nbsp; <a href="https://www.facebook.com/tomekdudeq"> Facebook</a>  &nbsp; | &nbsp; <a href="mailto:tomdudek99@gmail.com">Wyślij mi maila!</a> </span> </center>
 $$\mathrm{Hom}(Y \otimes X,Z) \cong \mathrm{Hom}(Y,\mathrm{Hom}(X,Z))$$<h2 id="wykształcenie">Wykształcenie</h2>
 <hr>
 <h4 id="uniwersytet-jagielloński-2024----obecnie">Uniwersytet Jagielloński (2024 &ndash; obecnie)</h4>
@@ -159,7 +159,7 @@ $$E^{pq}_1 = \left(\mathrm{H}^q\left(X, \Omega^p\right), \:\partial\right) \Righ
     <td style="border: none;" class="tg-0lax">Python</td>
   </tr></thead>
 </table>
-<p>Poza tym –- czego nie może zabraknąć w żadnym szanującym się CV –- znam angielski w stopniu C1 oraz posiadam prawo jazdy kat. B.</p>
+<p>Poza tym – czego nie może zabraknąć w żadnym szanującym się CV – znam angielski w stopniu C1 oraz posiadam prawo jazdy kat. B.</p>
 $$\pi_3(\mathbb{S}^2) = \mathbb{Z}$$
     <div class="posts-list">
       
